force-app/main/default/objects/API_Callout_Headers__mdt/API_Callout_Headers__mdt.object-meta.xml
<CustomObject>
    <label>API Callout Headers</label>
    <pluralLabel>API Callout Header</pluralLabel>
</CustomObject>