force-app/main/default/objects/API_Callout_Headers__mdt/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <label>endpoint</label>
    <type>Url</type>
</CustomField>