force-app/main/default/objects/API_Callout_Headers__mdt/fields/sourceSystem__c.field-meta.xml
<CustomField>
    <fullName>sourceSystem__c</fullName>
    <label>sourceSystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>