force-app/main/default/objects/API_Callout_Headers__mdt/fields/targetSystem__c.field-meta.xml
<CustomField>
    <fullName>targetSystem__c</fullName>
    <label>targetSystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>